--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		My current favourite song is <a src="https://youtu.be/_oX-omplYc8?si=Jen1FffQ8PWlPl3f">Aaha Tamatar Bade Mazedar</a>
+		My current favourite song is <a src="https://youtu.be/_oWY20C1lvA?si=icSvaB4ROCm8eKUI">आहा टमाटर | Aaha Tamatar Bade Mazedar | Hindi Poem For Kids</a>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
